--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,8 @@ dependencies {
 	implementation 'com.auth0:java-jwt:4.5.0'
 	implementation 'org.mapstruct:mapstruct:1.6.3'
 	implementation 'org.slf4j:slf4j-api:2.0.17'
-
+	implementation 'net.logstash.logback:logstash-logback-encoder:8.1'
+	implementation 'ch.qos.logback:logback-classic:1.5.18'
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
