Add Project Members Service

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,5 +23,11 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Run Unit Tests & Generate Coverage Report
+        run: ./gradlew clean test jacocoTestReport
+
+      - name: Upload JaCoCo HTML Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: build/reports/jacoco/test/html
