--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.6-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'jacoco'
 }
 
 group = 'com.cb'
@@ -11,6 +12,10 @@ java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
+}
+
+jacoco {
+	toolVersion = "0.8.13"
 }
 
 sourceSets {
@@ -45,6 +50,7 @@ dependencies {
 	// Main dependencies
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -80,6 +86,7 @@ dependencies {
 // Default test task
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
 
 // Unit Test Task
@@ -89,6 +96,7 @@ tasks.register('unitTest', Test) {
 	testClassesDirs = sourceSets.unitTests.output.classesDirs
 	classpath = sourceSets.unitTests.runtimeClasspath
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
 
 // Integration Test Task
@@ -103,4 +111,27 @@ tasks.register('integrationTest', Test) {
 // Run both in `./gradlew check`
 tasks.named('check') {
 	dependsOn tasks.named('unitTest')
+}
+
+jacocoTestReport {
+	dependsOn tasks.named('unitTest')
+	executionData.setFrom(file("$buildDir/jacoco/unitTest.exec"))
+	reports {
+		xml.required = true
+		html.required = true
+	}
+
+	reports {
+		xml.required = false
+		html.required = true
+		csv.required = false
+	}
+
+	classDirectories.setFrom(
+			fileTree(dir: "$buildDir/classes/java/main", excludes: [
+					'**/dto/**',
+					'**/config/**'
+			])
+	)
+	sourceDirectories.setFrom(files('src/main/java'))
 }
